--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-
-    </header>
+    <header> </header>
+    
     <main>
         <section class="container">
             <aside class="row">
@@ -39,8 +38,7 @@
         </aside>
         </section>
     </main>
-    <footer>
 
-    </footer>
+    <footer> </footer>
 </body>
 </html>
